kubernetes/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: books-api-rollout
spec:
  replicas: 2

  selector:
    matchLabels:
      app: books-api

  template:
    metadata:
      labels:
        app: books-api
    spec:
      containers:
      - name: books-api
        image: juanwigg/go-book-api:v0.0.2
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m

  revisionHistoryLimit: 3
  rollbackWindow:
    revisions: 3

  strategy:
    canary:
      canaryService: books-api-canary-service
      stableService: books-api-stable-service

      canaryMetadata:
        annotations:
          role: canary
        labels:
          role: canary

      stableMetadata:
        annotations:
          role: stable
        labels:
          role: stable

      steps:
      - setWeight: 20
      - pause:
          duration: 5m
      - setWeight: 80
      - pause: {}
