kubernetes/stable_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-api-stable-service
spec:
  selector:
    app: books-api
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http-web-svc
