kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: books-api-stable
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: books-api.local
    http:
      paths:
      - path: /
        backend:
          serviceName: books-api-stable-service
          servicePort: 80
